# strswitch

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  strswitch.hpp
benchmark/: CMakeLists.txt  benchmark.sh  frozen_benchmark.cpp.in  strswitch_benchmark.cpp.in
doc/: explanation.md
tests/: CMakeLists.txt  constexpr.cpp  custom_hash.cpp  custom_regex.cpp  main.cpp  thousand_cases.cpp
